# omni

./: .gitignore  ACCEPTANCE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md  RESEARCH.md
.engram/: memory.db
.github/workflows/: ci.yml
.omni/: manifest.json
benches/: comparative.rs  indexing.rs  search_quality.rs
docs/vision/: ARCHITECTURE.md
scripts/: omni-engram-add.sh  pre-commit
src/: cache.rs  cli.rs  discovery.rs  export.rs  fold.rs  incremental.rs  lib.rs  main.rs  query.rs  state.rs  topology.rs  types.rs
src/analysis/: churn.rs  coverage.rs  dead_code.rs  mod.rs
src/context/: mod.rs
src/intervention/: mod.rs
src/mcp/: mod.rs
src/parsing/: mod.rs  rust.rs  typescript.rs
src/search/: bm25.rs  mod.rs
src/semantic/: mod.rs
tests/: cli_compat_test.rs  cli_test.rs  comparative_test.rs  contract_test.rs  discovery_tests.rs  error_handling_test.rs  makefile_test.rs  omni_engram_add_test.rs  property_tests.proptest-regressions  property_tests.rs  query_tests.rs  typescript_parser.rs
tests/fixtures/basic/.omni/: manifest.json
tests/fixtures/basic/src/: extra.rs  lib.rs
