[package]
name = "omni-index"
version = "0.1.0"
edition = "2024"
description = "Omniscient Code Index - Semantic, interventionist code indexer for AI agents"
authors = ["Amar Singh <asinghchrony@protonmail.com>"]
license = "MIT"
repository = "https://github.com/bobamatcha/omni"
homepage = "https://github.com/bobamatcha/omni"
documentation = "https://docs.rs/omni-index"
readme = "README.md"
keywords = ["code-index", "bm25", "search", "tree-sitter", "ai-tools"]
categories = ["development-tools", "parser-implementations", "command-line-utilities"]
rust-version = "1.85"

[features]
# Default: enable everything for backwards compatibility
default = ["core", "extras"]

# Core: BM25 search, incremental indexing, CLI (always available)
core = []

# Extras: semantic, MCP, analysis, etc.
extras = ["mcp", "semantic", "analysis", "context", "intervention"]

# Individual features
mcp = ["dep:rmcp", "dep:schemars"]
semantic = ["dep:fastembed", "dep:instant-distance"]
analysis = []
context = []
intervention = ["dep:strsim"]


[[bin]]
name = "omni-server"
path = "src/main.rs"
required-features = ["mcp"]

[[bin]]
name = "omni"
path = "src/cli.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Parsing
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23.2"

# Graph
petgraph = "0.7"

# MCP Protocol (optional)
rmcp = { version = "0.3", features = ["server", "transport-io"], optional = true }

# File watching
notify = "7"
notify-debouncer-mini = "0.5"

# File system
walkdir = "2"
ignore = "0.4"
globset = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1.0", optional = true }
bincode = "1.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency
dashmap = "6"
parking_lot = "0.12"

# String interning
lasso = { version = "0.7", features = ["multi-threaded"] }

# Search
regex = "1"

# Semantic embeddings (optional)
fastembed = { version = "4", optional = true }
instant-distance = { version = "0.6", optional = true }

# Utilities
bytecount = "0.6"
strsim = { version = "0.11", optional = true }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
pretty_assertions = "1"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"
proptest-derive = "0.5"
walkdir = "2"

[[bench]]
name = "indexing"
harness = false

[[bench]]
name = "comparative"
harness = false

[[bench]]
name = "search_quality"
harness = false
